--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -92,8 +92,8 @@ services:
   # Frontend Next.js Service
   frontend:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile.frontend
+      context: .
+      dockerfile: Dockerfile.frontend.staging
       args:
         NEXT_PUBLIC_API_URL: http://localhost:8080
     environment:
@@ -112,8 +112,9 @@ services:
       retries: 3
       start_period: 40s
     volumes:
-      # Mount frontend for hot reload in dev mode
-      - ./frontend:/app:ro
+      # Mount frontend source for hot reload in dev mode
+      - ./frontend:/app/frontend:ro
+      # Preserve node_modules and build output from container
       - /app/node_modules
       - /app/.next
 
