--- a/.github/workflows/gemini-cli.yml
+++ b/.github/workflows/gemini-cli.yml
@@ -21,7 +21,7 @@ name: '💬 Gemini CLI'
 
 env:
   # ACT environment detection
-  IS_ACT: ${{ env.ACT || 'false' }}
+  IS_ACT: 'false'  # Will be overridden by ACT when running locally
   DRY_RUN: ${{ github.event.inputs.dry_run || 'false' }}
 
 concurrency:
