--- a/.github/workflows/staging-workflows/restart.yml
+++ b/.github/workflows/staging-workflows/restart.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   check-environment:
     name: Check Environment Status
-    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
+    runs-on: warp-custom-default  # ACT will override this to ubuntu-latest when running locally
     outputs:
       exists: ${{ steps.check.outputs.exists }}
       backend_deployment: ${{ steps.check.outputs.backend_deployment }}
@@ -70,7 +70,7 @@ jobs:
     name: Restart Backend Service
     needs: check-environment
     if: needs.check-environment.outputs.exists == 'true' && needs.check-environment.outputs.backend_deployment == 'true'
-    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
+    runs-on: warp-custom-default  # ACT will override this to ubuntu-latest when running locally
     steps:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
@@ -106,7 +106,7 @@ jobs:
     name: Restart Frontend Service
     needs: check-environment
     if: needs.check-environment.outputs.exists == 'true' && needs.check-environment.outputs.frontend_deployment == 'true'
-    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
+    runs-on: warp-custom-default  # ACT will override this to ubuntu-latest when running locally
     steps:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
@@ -142,7 +142,7 @@ jobs:
     name: Restart Supporting Services
     needs: check-environment
     if: needs.check-environment.outputs.exists == 'true'
-    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
+    runs-on: warp-custom-default  # ACT will override this to ubuntu-latest when running locally
     steps:
       - name: Configure GCP credentials
         uses: google-github-actions/auth@v2
@@ -171,7 +171,7 @@ jobs:
   post-restart-validation:
     name: Post-Restart Validation
     needs: [restart-backend, restart-frontend, restart-supporting-services]
-    runs-on: ${{ env.ACT && 'ubuntu-latest' || 'warp-custom-default' }}
+    runs-on: warp-custom-default  # ACT will override this to ubuntu-latest when running locally
     steps:
       - name: Wait for stabilization
         run: sleep 60
