--- a/Dockerfile.frontend.optimized
+++ b/Dockerfile.frontend.optimized
@@ -1,17 +1,21 @@
+# syntax=docker/dockerfile:1
 # Optimized Frontend Dockerfile with Multi-Stage Caching
+# Requires Docker BuildKit: DOCKER_BUILDKIT=1
 FROM node:20-alpine AS deps
 WORKDIR /app
 
 # Copy package files
 COPY frontend/package*.json ./
 
-# Install dependencies with better retry logic
-RUN npm config set fetch-retries 5 && \
+# Install dependencies with better retry logic and cache mount
+RUN --mount=type=cache,target=/root/.npm \
+    npm config set fetch-retries 5 && \
     npm config set fetch-retry-mintimeout 60000 && \
     npm config set fetch-retry-maxtimeout 300000 && \
     npm config set maxsockets 5 && \
+    npm config set cache /root/.npm && \
     npm ci --legacy-peer-deps || \
-    (npm cache clean --force && npm ci --legacy-peer-deps)
+    (npm cache verify && npm ci --legacy-peer-deps)
 
 # Builder stage
 FROM node:20-alpine AS builder
@@ -33,20 +37,38 @@ COPY frontend/components.json ./
 ARG NEXT_PUBLIC_API_URL=http://localhost:8080
 ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
 
-# Copy source files
-COPY frontend/app ./app
-COPY frontend/components ./components
-COPY frontend/hooks ./hooks
-COPY frontend/lib ./lib
+# Copy source files in order of change frequency (least to most)
+# Static assets and configs change less frequently
 COPY frontend/public ./public
-COPY frontend/services ./services
-COPY frontend/store ./store
+COPY frontend/lib ./lib
+
+# Type definitions and utilities
 COPY frontend/types ./types
 COPY frontend/utils ./utils
 
-# Build with memory optimization
+# Services and state management
+COPY frontend/services ./services
+COPY frontend/store ./store
+COPY frontend/hooks ./hooks
+COPY frontend/auth ./auth
+
+# Additional required directories
+COPY frontend/config ./config
+COPY frontend/providers ./providers
+COPY frontend/styles ./styles
+COPY frontend/chat ./chat
+COPY frontend/contexts ./contexts
+
+# UI components and pages (most frequently changed)
+COPY frontend/components ./components
+COPY frontend/app ./app
+
+# Build with memory optimization and cache mounts
 ENV NODE_OPTIONS="--max-old-space-size=4096"
-RUN npm run build
+RUN --mount=type=cache,target=/app/.next/cache \
+    --mount=type=cache,target=/root/.npm \
+    npm run build && \
+    echo "Build cache size: $(du -sh /app/.next/cache 2>/dev/null || echo 'N/A')"
 
 # Runtime stage
 FROM node:20-alpine AS runner
