--- a/.github/workflows/gemini-pr-review.yml
+++ b/.github/workflows/gemini-pr-review.yml
@@ -29,7 +29,7 @@ name: '🧐 Gemini Pull Request Review'
 
 env:
   # ACT environment detection
-  IS_ACT: ${{ env.ACT || 'false' }}
+  IS_ACT: 'false'  # Will be overridden by ACT when running locally
   DRY_RUN: ${{ github.event.inputs.dry_run || 'false' }}
 
 concurrency:
