--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,14 +25,18 @@
       "@/chat/*": ["./chat/*"],
       "@/components/ui/*": ["./components/ui/*"],
       "@/components/*": ["./components/*"],
+      "@/config": ["./config"],
+      "@/config/*": ["./config/*"],
       "@/contexts/*": ["./contexts/*"],
       "@/hooks/*": ["./hooks/*"],
       "@/lib/*": ["./lib/*"],
       "@/mocks/*": ["./mocks/*"],
+      "@/providers/*": ["./providers/*"],
       "@/services/*": ["./services/*"],
       "@/store/*": ["./store/*"],
+      "@/styles/*": ["./styles/*"],
       "@/types/*": ["./types/*"],
-      "@/auth/*": ["./auth/*"],
+      "@/utils/*": ["./utils/*"],
       "@/*": ["./*"]
     }
   },
